--- a/ScientResearch/src/main/resources/templates/page/promanage/declare.html
+++ b/ScientResearch/src/main/resources/templates/page/promanage/declare.html
@@ -121,7 +121,7 @@
 
         <script type="text/html" id="toolbarDemo2">
             <div class="layui-btn-container">
-                <button class="layui-btn layui-btn-sm layui-btn-danger data-delete-btn" lay-event="deletelow"> 批量删除 </button>
+                <button class="layui-btn layui-btn-sm layui-btn-danger data-delete-btn" lay-event="deletelow2"> 批量删除 </button>
             </div>
         </script>
 
@@ -135,13 +135,26 @@
                 <form class="layui-form layui-form-pane" id="searchFrom2" action="">
                     <div class="layui-form-item">
                         <div class="layui-inline">
-                            <label class="layui-form-label">用户名</label>
+                            <label class="layui-form-label">项目名</label>
                             <div class="layui-input-inline">
-                                <input type="text" name="username" autocomplete="off" class="layui-input">
+                                <input type="text" name="pname" autocomplete="off" class="layui-input">
                             </div>
                         </div>
+
                         <div class="layui-inline">
-                            <button type="button" class="layui-btn layui-btn-primary"  lay-submit lay-filter="data-search-btn" id="data-search"><i class="layui-icon"></i> 搜 索</button>
+                            <label class="layui-form-label">部门</label>
+                            <div class="layui-input-inline">
+                                <select name="pdept" placeholder="请输入部门" value="" class="layui-input">
+                                    <option value=""></option>
+                                    <option value="信息系">信息系</option>
+                                    <option value="管理系">管理系</option>
+                                    <option value="土木系">土木系</option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="layui-inline">
+                            <button type="button" class="layui-btn layui-btn-primary"  lay-submit lay-filter="data-search-btn2" id="data-search1"><i class="layui-icon"></i> 搜 索</button>
                         </div>
                     </div>
                 </form>
@@ -159,24 +172,25 @@
         </script>
 
         <script type="text/html" id="currentTableBar2">
-            <a class="layui-btn layui-btn-normal layui-btn-xs data-count-edit" lay-event="edit">编辑</a>
-            <a class="layui-btn layui-btn-xs layui-btn-danger data-count-delete" lay-event="delete">删除</a>
+            <a class="layui-btn layui-btn-normal layui-btn-xs data-count-edit" lay-event="edit2">编辑</a>
+            <a class="layui-btn layui-btn-xs layui-btn-danger data-count-delete" lay-event="delete2">删除</a>
+            <a class="layui-btn layui-btn-xs layui-btn-danger data-count-blue" lay-event="down">下载</a>
+        </script>
+
+        <script type="text/html" id="currentTableBar3">
+            <a class="layui-btn layui-btn-normal layui-btn-xs data-count-edit" lay-event="on">通过</a>
+            <a class="layui-btn layui-btn-xs layui-btn-danger data-count-delete" lay-event="off">不通过</a>
         </script>
 
         <!--修改页面开始-->
         <div style="display: none;margin: auto;" class="layui-form layuimini-form" id="Edit2">
             <form class="layui-form" lay-filter="dataFrom2" id="dataFrm2">
+
                 <div class="layui-form-item" style="width: 500px;margin-top: 50px;">
-                    <label class="layui-form-label required">批次名称</label>
+                    <label class="layui-form-label required">项目名称</label>
                     <div class="layui-input-block">
-                        <input type="text" name="pcname" lay-verify="required" lay-reqtext="批次名称不能为空" placeholder="请输入批次名称" value="" class="layui-input">
-                        <input type="hidden" name="pcid" value=""/>
-                    </div>
-                </div>
-                <div class="layui-form-item" style="width: 500px;">
-                    <label class="layui-form-label required">批次状态</label>
-                    <div class="layui-input-block">
-                        <input type="text" name="pcstate" lay-verify="required" lay-reqtext="批次状态不能为空" placeholder="请输入批次状态" value="" class="layui-input">
+                        <input type="text" name="pname" lay-verify="required" lay-reqtext="项目名称不能为空" placeholder="请输入项目名称" value="" class="layui-input">
+                        <input type="hidden" name="pid" value=""/>
                     </div>
                 </div>
 
@@ -188,22 +202,58 @@
                 </div>
 
                 <div class="layui-form-item" style="width: 500px;">
+                    <label class="layui-form-label required">项目负责人</label>
+                    <div class="layui-input-block">
+                        <input type="text" name="ppeople" lay-verify="required" lay-reqtext="项目分类不能为空" placeholder="请输入项目分类" value="" class="layui-input">
+                    </div>
+                </div>
+
+                <div class="layui-form-item" style="width: 500px;">
                     <label class="layui-form-label required">项目分类</label>
                     <div class="layui-input-block">
-                        <input type="text" name="pcclasify" lay-verify="required" lay-reqtext="项目分类不能为空" placeholder="请输入项目分类" value="" class="layui-input">
+                        <select name="pcclasify" readonly="readonly">
+                            <option value="小型项目">小型项目</option>
+                            <option value="重点项目">重点项目</option>
+                            <option value="学院项目">学院项目</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="layui-form-item" style="width: 500px;">
+                    <label class="layui-form-label required">项目分类</label>
+                    <div class="layui-input-block">
+                        <select name="pdept" placeholder="请输入部门" value="" class="layui-input">
+                            <option value="信息系">信息系</option>
+                            <option value="管理系">管理系</option>
+                            <option value="土木系">土木系</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="layui-form-item" style="width: 500px;">
+                    <label class="layui-form-label required">成果形式</label>
+                    <div class="layui-input-block">
+                        <input type="text" name="presfrom" lay-verify="required" lay-reqtext="成果形式不能为空" placeholder="请输入成果形式" value="" class="layui-input">
+                    </div>
+                </div>
+
+                <div class="layui-form-item" style="width: 500px;">
+                    <label class="layui-form-label required">其他说明</label>
+                    <div class="layui-input-block">
+                        <input type="text" name="pothers" lay-verify="required" lay-reqtext="其他说明不能为空" placeholder="请输入其他说明" value="" class="layui-input">
                     </div>
                 </div>
 
                 <div class="layui-inline">
-                    <label class="layui-form-label">开始日期</label>
+                    <label class="layui-form-label">申报时间</label>
                     <div class="layui-input-inline">
-                        <input type="text" name="pcstarttime" class="layui-input" placeholder="请选择时间">
+                        <input type="text" name="pdate" class="layui-input" id="pdate" placeholder="请选择时间">
                     </div>
                 </div>
                 <div class="layui-inline">
                     <label class="layui-form-label">结束日期</label>
                     <div class="layui-input-inline">
-                        <input type="text" name="pcendtime" class="layui-input"  placeholder="请选择时间">
+                        <input type="text" name="pendtime" class="layui-input" id="pendtime"  placeholder="请选择时间">
                     </div>
                 </div>
 
@@ -275,10 +325,21 @@
             ,type: 'datetime'
         });
 
+        laydate.render({
+            elem: '#pdate',
+            type: 'datetime'
+
+        });
+
+        laydate.render({
+            elem: '#pendtime'
+            ,type: 'datetime'
+        });
+
         var tablereh1;
         tablereh1 = table.render({
             elem: '#currentTableId2',
-            url: '',
+            url: '/declare/listProjectSchool',
             toolbar: '#toolbarDemo2',
             limits: [5,10, 15, 20, 25, 50, 100],
             limit: 5,
@@ -289,16 +350,19 @@
                     {type: "checkbox", width: 50},
                     {field: 'pid', width: 60, title: 'ID', sort: true},
                     {field: 'pname', width: 100, title: '项目名称'},
-                    {field: 'pcoms', width: 150, title: '项目来源'},
-                    {field: 'ppeople', width: 100, title: '参与成员'},
-                    {field: 'ptype', title: '项目分类',width:100},
-                    {field: 'pdept', width: 150, title: '所在部门', sort: true},
-                    {field: 'psource', width: 150, title: '项目资源', sort: true},
-                    {field: 'pothers', width: 150, title: '其他说明'},
-                    {field: 'pdate', width: 135, title: '申报时间', sort: true},
-                    {field: 'pstarttime', width: 135, title: '开始时间', sort: true},
-                    {field: 'pendtime', width: 135, title: '结束时间', sort: true},
-                    {title: '操作', minWidth: 150, toolbar: '#currentTableBar2', align: "center"}
+                    {field: 'pccome', width: 100, title: '项目来源'},
+                    {field: 'members', width: 100, title: '参与成员'},
+                    {field: 'ppeople', width: 100, title: '负责人'},
+                    {field: 'pdept', width: 100, title: '所在部门', sort: true},
+                    {field: 'psb1', width: 100, title: '审核状态', templet: function (d) {
+            if (d.psb2 == 0) {
+                return '<span class="layui-badge">未通过</span>';
+            } else {
+                return '<span class="layui-badge layui-bg-blue">已通过</span>';
+            }
+        }},
+                    {title: '操作', minWidth: 200, toolbar: '#currentTableBar2', align: "center"},
+                    {title: '审核', minWidth: 150, toolbar: '#currentTableBar3', align: "center"}
                 ]
             ]
         });
@@ -306,11 +370,21 @@
         // 监听搜索操作
         form.on('submit(data-search-btn)', function (data) {
             var datas = $("#searchFrom").serialize();
-                    //执行搜索重载
-                    tablereh.reload({
-                        url:'/declare/searchdeclare?'+datas,
+            //执行搜索重载
+            tablereh.reload({
+                url:'/declare/searchdeclare?'+datas,
 
-                    });
+            });
+        });
+
+        // 监听搜索操作
+        form.on('submit(data-search-btn2)', function (data) {
+            var datas = $("#searchFrom2").serialize();
+            //执行搜索重载
+            tablereh1.reload({
+                url:'/declare/seachrProjectSch?'+datas,
+
+            });
         });
 
         var add_edit_open;
@@ -427,25 +501,102 @@
             }
         });
 
-        // //添加修改 表单提交
-        // form.on('submit(edit-add-Btn)', function(data){
-        //     var datafield = data.field;
-        //     $.ajax({
-        //         type:'POST',
-        //         url:url,
-        //         data:datafield,
-        //         success:function(msg){
-        //             layer.msg(msg.info);
-        //             layer.close(add_edit_open);
-        //             tablereh.reload();
-        //         }
-        //     });
-        // });
-        //
-        // //关闭添加对话框
-        // $("#Editclose").click(function(){
-        //    layer.close(add_edit_open);
-        // });
+//===============<!-------------------------------------->==============
+        var edit_open;
+        /**
+         * toolbar监听事件
+         */
+        table.on('toolbar(currentTableFilter2)', function (obj) {
+
+           if (obj.event === 'deletelow2') {  // 监听删除操作
+                var checkStatus = table.checkStatus('currentTableId2')
+                    , data = checkStatus.data;
+                var kyid = new Array();
+                for (let i = 0; i <data.length ; i++) {
+                    kyid[i] = data[i].pid;
+                }
+
+                layer.confirm('真的删除选中的么', function (index) {
+                    $.ajax({
+                        type:'GET',
+                        url:'/declare/delprojectlot?pids='+kyid,
+                        success:function(msg){
+                            layer.msg(msg.info);
+                            tablereh1.reload();
+                        }
+                    });
+                    layer.close(index);
+                });
+
+            }
+        });
+
+        table.on('tool(currentTableFilter2)', function (obj) {
+            var data = obj.data;
+            if (obj.event === 'edit2') {
+
+                edit_open = layer.open({
+                    title: '编辑项目',
+                    type:1,
+                    content:$('#Edit2'),
+                    skin: 'layui-layer-lan',
+                    area: ['600px', '500px']
+                    ,btnAlign:'c'
+                    ,btn: ['修改'
+                        , '取消修改']
+                    ,yes: function(index, layero){
+                        var data1 = form.val("dataFrom2");
+                        $.ajax({
+                            type:'POST',
+                            url:'/declare/editproject',
+                            data:data1,
+                            success:function(msg){
+                                layer.msg(msg.info);
+                                layer.close(edit_open);
+                                tablereh1.reload();
+                            }
+                        });
+
+                    }
+                    ,btn2: function(index, layero){
+                    },
+                    success:function(index){
+                        form.val('dataFrom2',data);
+                    }
+                });
+                return false;
+            } else if (obj.event === 'delete2') {
+                layer.confirm('真的删除行么', function (index) {
+                    $.ajax({
+                        type:'GET',
+                        url:'/declare/delproject?pid='+data.pid,
+                        success:function(msg){
+                            layer.msg(msg.info);
+                            tablereh1.reload();
+                        }
+                    });
+                    layer.close(index);
+                });
+            }else if(obj.event === 'on'){
+                $.ajax({
+                    type:'GET',
+                    url:'/declare/updateByPSB2?pid='+data.pid+'&psb2='+1,
+                    success:function(msg){
+                        layer.msg(msg.info);
+                        tablereh1.reload();
+                    }
+                });
+            }else if(obj.event === 'off'){
+                $.ajax({
+                    type:'GET',
+                    url:'/declare/updateByPSB2?pid='+data.pid+'&psb2='+0,
+                    success:function(msg){
+                        layer.msg(msg.info);
+                        tablereh1.reload();
+                    }
+                });
+            }
+        });
 
     });
 </script>
