2020 11 6 16:31 完成项目延期

--- a/ScientResearch/src/main/resources/templates/page/promanage/check_project3.html
+++ b/ScientResearch/src/main/resources/templates/page/promanage/check_project3.html
@@ -63,7 +63,7 @@
         <div style="display: none;margin: auto;" class="layui-form layuimini-form" id="EditandAdd">
             <form class="layui-form" lay-filter="dataFrom" id="dataFrm">
             <div class="layui-form-item" style="width: 500px;">
-                <label class="layui-form-label required">文件上传(可以省略)</label>
+                <label class="layui-form-label required">文件上传</label>
                 <div class="layui-upload-drag" id="test3">
                     <i class="layui-icon"></i>
                     <p>点击上传，或将文件拖拽到此处</p>
